# embeddings-as-tool-selectors

./: .gitignore  README.md  playing_with_embeddings.ipynb  pyproject.toml
